--- a/ES6/3、字符串的扩展.md
+++ b/ES6/3、字符串的扩展.md
@@ -2,5 +2,10 @@
 
 ### 1、codePointAt()
 ### 2、String.fromCodePoint() 、字符串的遍历器接口
+### includes startsWith endsWith
+### repeat
+### padStart padEnd
+### matchAll
+    `matchAll`方法返回一个正则表达式在当前字符串的所有匹配，
 ### 3、模板字符串{}
 ### 4、多种新处理字符串的API
