--- a/ES6/4、数值扩展.md
+++ b/ES6/4、数值扩展.md
@@ -19,7 +19,7 @@
 
 #### Math对象新增API
 
-##### 1、`Math.trunc()`用来向下取整。
+##### 1、`Math.trunc()`用于去除一个数的小数部分，返回整数部分。
 ```javascript
 Math.trunc(4.1) // 4
 Math.trunc(4.9) // 4
