--- a/ES6/9、数据结构.md
+++ b/ES6/9、数据结构.md
@@ -1,23 +1,23 @@
 ## 数据结构
 
 ### Set
-1、set可以用`add()`添加
-2、add添加重复元素不报错，但是不会生效，可用来去重
-3、去重的时候不会做数据类型的转换
-4、 Set实例的方法  `add`,`delete`,`clear`,`has`
-5、Set对象的遍历 `for()` ,`forEach()`
-6、
+1. set可以用`add()`添加
+2. add添加重复元素不报错，但是不会生效，可用来去重
+3. 去重的时候不会做数据类型的转换
+4.  Set实例的方法  `add`,`delete`,`clear`,`has`
+5. Set对象的遍历 `for()` ,`forEach()`
+6. 
  
  ### weakSet
- 1、只能支持对象
- 2、对象只是弱引用（垃圾回收机制）
- 3、与`Set`比较，size等属性和claer方法没有 ,不能遍历
+ 1. 只能支持对象
+ 2. 对象只是弱引用（垃圾回收机制）
+ 3. 与`Set`比较，size等属性和claer方法没有 ,不能遍历
  
  ### Map
- 1、Map添加元素用`set()`方法
- 2、会自动转换
- 3、方法： `set`, `delete` , `claer`
- 4、遍历同set类似
+ 1. Map添加元素用`set()`方法
+ 2. 会自动转换
+ 3. 方法： `set`, `delete` , `claer`
+ 4. 遍历同set类似
  
   ### weakMap
   类似weakSet 
