--- a/ES6/9、数据结构.md
+++ b/ES6/9、数据结构.md
@@ -35,7 +35,7 @@
 
 | Tables        | Set           | Array |
 | ------------- |:-------------:|:-----:|
-| 增加     | set('a',1)| push({'a',1}) |
+| 增加     | add('a',1)| push({'a',1}) |
 | 查询      | has('a')|   find(item=>item.a) |
 | 改       | forEach(item=>item.a?item.a=2:'')      |    forEach.info(item=>item.a ? item.a=2:'') |
 | 删除      | delete('a')|   findIndex(item=>item.a)  array.splice(index,1) |
@@ -50,7 +50,7 @@ let set = new Set();
 let obj = {};
 
 ```
-| Tables        | Set           | Set   |     Object  |
+| Tables        | Map           | Set   |     Object  |
 | ------------- |:-------------:|:-----:|:-----------:|
 | 增加          | set('a',1)|  add(item) |  obj['a'] =1 |
 | 查询          | has('a')|   has('a') | 't' in obj |
