--- a/JS/节流与防抖.md
+++ b/JS/节流与防抖.md
@@ -8,31 +8,25 @@
 
 
 ```js
-function _throttle(fn,wait,time){
-    var previous = null; //记录上一次运行的时间
-    var timer = null;
-
-    return function(){
-        var now = +new Date();
-
-        if(!previous) previous = now;
-        //当上一次执行的时间与当前的时间差大于设置的执行间隔时长的话，就主动执行一次
-        if(now - previous > time){
-            clearTimeout(timer);
-            fn();
-            previous = now;// 执行函数后，马上记录当前时间
-        }else{
-            clearTimeout(timer);
-            timer = setTimeout(function(){
-                fn();
-            },wait);
+// 简单的节流函数
+function throttle (func, wait, mustRun) {
+    let timeout,
+        startTime = new Date();
+    return function () {
+        let that = this,  
+            args = arguments,
+            curTime = new Date();
+        clearTimeout(timeout);
+        // 如果达到了规定的触发时间间隔，触发 handler
+        if (curTime - startTime >= mustRun) {
+            func.apply(that, args);
+            startTime = curTime;
+        } else {
+            // 没达到触发间隔，重新设定定时器
+            timeout = setTimeout(func, wait);
         }
-    }
+    };
 }
-function _log(){
-    console.log(1)
-}
-window.onscroll = _debounce(_log,500,2000)
 ```
 
 
@@ -41,54 +35,7 @@ window.onscroll = _debounce(_log,500,2000)
 **函数防抖** ：如果有人进电梯（触发事件），那电梯将在10秒钟后出发（执行事件监听器），这时如果又有人进电梯了（在10秒内再次触发该事件），我们又得等10秒再出发（重新计时）。
 
 
-```js
-/**
- * underscore 防抖函数，返回函数连续调用时，空闲时间必须大于或等于 wait，func 才会执行
- *
- * @param  {function} func        回调函数
- * @param  {number}   wait        表示时间窗口的间隔
- * @param  {boolean}  immediate   设置为ture时，是否立即调用函数
- * @return {function}             返回客户调用函数
- */
-_.debounce = function(func, wait, immediate) {
-    var timeout, args, context, timestamp, result;
 
-    var later = function() {
-      // 现在和上一次时间戳比较
-      var last = _.now() - timestamp;
-      // 如果当前间隔时间少于设定时间且大于0就重新设置定时器
-      if (last < wait && last >= 0) {
-        timeout = setTimeout(later, wait - last);
-      } else {
-        // 否则的话就是时间到了执行回调函数
-        timeout = null;
-        if (!immediate) {
-          result = func.apply(context, args);
-          if (!timeout) context = args = null;
-        }
-      }
-    };
-
-    return function() {
-      context = this;
-      args = arguments;
-      // 获得时间戳
-      timestamp = _.now();
-      // 如果定时器不存在且立即执行函数
-      var callNow = immediate && !timeout;
-      // 如果定时器不存在就创建一个
-      if (!timeout) timeout = setTimeout(later, wait);
-      if (callNow) {
-        // 如果需要立即执行函数的话 通过 apply 执行
-        result = func.apply(context, args);
-        context = args = null;
-      }
-
-      return result;
-    };
-  };
-
-```
 
 这个是undersource的源码，逻辑能分析，凡是对于实际应用中，显得有点复杂，。下面给一个简洁版的。
 
