--- a/CSS/垂直居中.md
+++ b/CSS/垂直居中.md
@@ -158,6 +158,35 @@
 `line-height`，这个使用也是有使用条件的。 在应用到一个块级元素时，它定义了该元素中基线之间的最小距离而不是最大距离。  
 并且该属性还会被子元素继承。
 
+**方法九：绝对定位+margin：auto +  四个定位值**
+
+通过对确定宽高的的元素，相对其父元素定位，`top` `bottom` `left` `right`四个属性的值都设置为0， 通过margin：auto来对子元素进行位置的改变
+```html
+<h2>垂直居中 绝对定位方式</h2>
+<div class="type2">
+    <div class="type2-son">居中元素</div>
+</div>
+<style>
+    .type2 {
+        position: relative;
+        height: 200px;
+        background: yellow;
+
+    }
+
+    .type2-son {
+        position: absolute;
+        width: 100px;
+        height: 20px;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
+    }
+</style>
+```
+
 ### 总结：
 
 综上所属，最好用的当然属于flex，有些人称之为终级杀器，其次可以使用transform。使用定位的方法并不是很明智。
