--- a/CSS/长度单位、字体单位、各种高度等易混淆属性.md
+++ b/CSS/长度单位、字体单位、各种高度等易混淆属性.md
@@ -69,3 +69,11 @@ content + padding + border + scroll
 **offsetTop/offsetLeft**  
 表示该元素的左上角与父容器（offsetParent对象）左上角的距离。所以，只需要将这两个值进行累加，就可以得到该元素的绝对坐标。
 
+## 好用的getBoundingClientRect
+getBoundingClientRect()最先是IE的私有属性，现在已经是一个W3C标准。所以你不用当心浏览器兼容问题，不过还是有区别的：IE只返回top,lef,right,bottom四个值，可以通过`width = right-left`， `height = bottom-top`来进行兼容性处理。
+
+不过需要注意，getBoundingClientRect方法中的right,bottom和CSS中的不一样，如下图：
+
+![](../assets/getBoundingClientRect.png)
+
+通过这些特性，可以不用之前使用offsetTop/offsetLeft来获取绝对位置，top/left就是绝对位置，
