--- a/JS/前端优化.md
+++ b/JS/前端优化.md
@@ -34,3 +34,24 @@ tags: JS
 1. 使用事件委托，通过时间冒泡，将事件绑定到父元素上
 2. 及时移除事件处理程序
 3. 尽量避免使用闭包占用内存
+
+## [前端性能优化之加载技术](https://juejin.im/post/59b73ef75188253db70acdb5)
+
+
+## DOM操作优化
+**参考**： [前端最佳实践（一）------DOM操作](https://juejin.im/post/59cf174c6fb9a00a4c273197#heading-3)  
+google给出的一个频繁render的 [例子](https://wengjq.github.io/GithubPage/Blog-Demo/animation.html)
+
+1. 合并多次的DOM操作
+2. 让DOM元素脱离渲染树（render Tree）后修改
+   1. 使用文档片段
+   2. display：none先隐藏元素后操作DOM，最后再显示
+   3. 克隆DOM元素到内存中
+3. 使用局部变量缓存样式信息
+4. 设置具有动画效果的元素定位为**绝对定位**
+
+## CSS动画优化
+* [CSS Animation性能优化](http://www.w3cplus.com/animation/animation-performance.html)，对浏览器解析动画的过程做了详细的介绍，根据过程中的步骤对动画进行优化，主要两点：GPU加速，will-change属性
+
+
+
