--- a/HTTP/登录认证.md
+++ b/HTTP/登录认证.md
@@ -157,7 +157,7 @@ https://your.awesome-app.com/make-friend/?jwt=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1Ni
 Java中对JWT的支持可以考虑使用[JJWT](https://github.com/jwtk/jjwt)开源库；JJWT实现了JWT, JWS, JWE 和 JWA RFC规范；下面将简单举例说明其使用：  
 **生成Token码**
 
-```hljs javascript
+```hljs
 import javax.crypto.spec.SecretKeySpec;
 import javax.xml.bind.DatatypeConverter;
 import java.security.Key;
