--- a/JS/运算符.md
+++ b/JS/运算符.md
@@ -321,9 +321,23 @@ console.log(Foo instanceof Foo);//false
 * 任何用`let`或`const`声明的属性不能够从它被声明的作用域中删除
 * 使用`var`声明的属性不能从全局作用域中或者函数作用域中删除
 * 不可设置的属性不能被删除
-### delete与splice区别
+#### delete与splice区别
 以数组对象为例，
 1. `delete`只能删除指定数组元素的对象，数组的大小不改变，删除后位置空余，显示`undefined`，或者其他填充值。`splice`指定删除数组元素对象，数组大小发生变化。
 2. `delete`每次只能删除一个，`splice`一次可以删除一个或多个。
 
+
+### new做了什么
+```js
+// 正常创建一个对象
+function Super() {};
+var s = new Super();
+```
+new在上述过程中的操作科分为三步
+```js
+var s = {};
+s.__proto__ = Super.prototype;
+Super.call(s);
+// 其中，第一步和第二步可以理解为Object.create(Super.prototype)
+```
 
