--- a/problem/08-工程化.md
+++ b/problem/08-工程化.md
@@ -1,8 +1,50 @@
-48. Grunt和Gulp的区别
+
+# 前端工程化
+
+1. 对webpack,gulp，grunt等有没有了解?对比。
+2. webpack的入口文件怎么配置，多个入口怎么分割。
+3. webpack的loader和plugins的区别
+4. gulp的具体使用。
+5. 前端工程化的理解、如何自己实现一个文件打包，比如一个JS文件里同时又ES5 和ES6写的代码，如何编译兼容他们
+
+
+sdfh
+
+
+1. 对webpack,gulp，grunt等有没有了解?对比。
+    * gulp和grunt是前端自动化构建的工具，帮助用户完成js\\css压缩、less编译等（只不过现在webpack也可以完成压缩等任务，可以替代gulp的这部分功能）。
+    * webpack和browserify是前端模块化方案，与seajs和requirejs是一个东西，只不过seajs和requirejs是在线编译方案，引入一个CMD\\AMD编译器，让浏览器能认识export、module、define等，而webpack和browserify是预编译方案，提前将es6模块、AMD、CMD模块编译成浏览器认识的js。
+    * 他们之间的区别见以上两点，只不过相互之间也会有一些相似的功能。
+    * grunt配置复杂繁重，是基于文件流的操作，比较慢；gulp是基于内存流的操作，配置轻量级，代码组织简单易懂，异步任务。
+    * webpack的话，就是配置复杂，文档杂乱，插件繁多，难于上手。
+
+
+2. webpack的入口文件怎么配置，多个入口怎么分割。
+    ```js
+    entry: {
+      home: resolve(__dirname, "src/home/index.js"),
+      about: resolve(__dirname, "src/about/index.js")
+    }
+
+    ```
+3. webpack的loader和plugins的区别
+
+    * loader 用于加载某些资源文件。 因为webpack 本身只能打包commonjs规范的js文件，对于其他资源例如 css，图片，或者其他的语法集，比如 jsx， coffee，是没有办法加载的。 这就需要对应的loader将资源转化，加载进来。从字面意思也能看出，loader是用于加载的，它作用于一个个文件上。
+
+    * plugin 用于扩展webpack的功能。它直接作用于 webpack，扩展了它的功能。当然loader也时变相的扩展了 webpack ，但是它只专注于转化文件（transform）这一个领域。而plugin的功能更加的丰富，而不仅局限于资源的加载。
+
+4. gulp的具体使用。
+5. 前端工程化的理解、如何自己实现一个文件打包，比如一个JS文件里同时又ES5 和ES6写的代码，如何编译兼容他们
+
+
+
+
+
+6. Grunt和Gulp的区别
 
     答案：[Gulp vs Grunt](http://www.benben.cc/blog/?p=407)
 
 
-49. AngularJS中service\factory\provider的区别
+7. AngularJS中service\factory\provider的区别
 
     答案:讲的非常不错，可以看看。[Differences Between Providers In AngularJS](http://blog.xebia.com/2013/09/01/differences-between-providers-in-angularjs/)和stackoverflow上的回答[Service vs provider vs factory](http://stackoverflow.com/questions/15666048/service-vs-provider-vs-factory)。如果英文看的不爽，这里有一篇中文的，还不错[那伤不起的provider们啊](http://hellobug.github.io/blog/angularjs-providers/)。
