--- a/CSS/垂直居中.md
+++ b/CSS/垂直居中.md
@@ -11,48 +11,47 @@
 </div>
 ```
 
-```css
+```html
 <style>
-        body,html {
-            margin: 0;
-        }
-        .container{
-            margin: 0;
-            width: 100%;
-            height: 100%;
-            position: relative;
-        }
-        .content{
-            width: 400px;
-            height: 200px;
-            background: #CCCCCC;
-            margin:auto;
-        }
+  body,html {
+      margin: 0;
+  }
+  .container{
+      margin: 0;
+      width: 100%;
+      height: 100%;
+      position: relative;
+  }
+  .content{
+      width: 400px;
+      height: 200px;
+      background: #CCCCCC;
+      margin:auto;
+  }
 </style>
 ```
 
 #### **情况一**：在明确知道父元素与子元素的height属性值
 
-```
+```css
 .container {
+   height: 500px;
+}
 
-            height: 500px;
-        }
-
-        .content {
-             width: 400px;
-             height: 200px;
-        }
+.content {
+   width: 400px;
+   height: 200px;
+}
 ```
 
 **方法一**：父元素使用相对定位，子元素使用绝对定位，使用top或者margin等改变位置的属性，设置为父元素高度的一半减去子元素高度的一半
 
 ```css
 .content {
-            /*方法一*/
-            position: absolute;
-            /*top: 150px;*/
-            /*margin-top: 150px;*/
+  /*方法一*/
+  position: absolute;
+  /*top: 150px;*/
+  /*margin-top: 150px;*/
 }
 ```
 
@@ -60,12 +59,12 @@
 
 ```css
 /*方法二： flex*/
-        .container{
-            display: flex;
-        }
-        .content{
-            align-self:center;
-        }
+.container{
+    display: flex;
+}
+.content{
+    align-self:center;
+}
 ```
 
 #### **情况二**：父元素或者子元素高度没有明确表明，但是高度是有的，这时flex同样使用，其他方法使用JS获取到高度在重新设置
@@ -74,12 +73,12 @@
 
 ```css
 /*方法二： flex*/
-        .container{
-            display: flex;
-        }
-        .content{
-            align-self:center;
-        }
+.container{
+    display: flex;
+}
+.content{
+    align-self:center;
+}
 ```
 
 **注意**：flex布局是CSS3中有有用的发明，尤其在剧中为题上，设置普通的样式不好解决的情况下，使用flex布局很容易解决，在以后使用的过程中，有限使用flex布局
@@ -96,16 +95,19 @@
 </script>
 ```
 
-**方法五**：使用`transform`，对位置进行移动，这个方法是比较好操作的，不受高度是否知道限制，自由的大，适用性广。
+**方法五**：使用`transform`，对位置进行移动，这个方法是比较好操作的，不受高度是否知道限制，自由的大，适用性广。`transform`的使用对象是块级元素以及某些内联元素
+
+注意： translate(x,y) 括号里填百分比数据的话，会以本身的长宽做参考，所以先将元素顶部通过定位移动到页面50%位置(`top: 50%`)，然后再对元素自身translate变换，移动自身50%
 
 ```css
 .content {
-            position: relative;
-            transform: translateY(50%);
-        }
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    }
 ```
 
-**情况三**：一些在特定环境下使用的居中操作
+#### **情况三**：一些在特定环境下使用的居中操作
 
 * 使用`vertical-align`定义**行内元素**的基线相对于该元素所在行的基线的垂直对齐，此方法只针对于内嵌或者行内元素，使用时经常发现不起作用，以为没用，此时要去检查是否为行内元素。比如加上table和table-cell属性。
 
