--- a/CSS/垂直居中.md
+++ b/CSS/垂直居中.md
@@ -108,10 +108,11 @@
 ```
 #### 方法5 ：vertical-align
 
-使用`vertical-align`定义**行内元素**的基线相对于该元素所在行的基线的垂直对齐，这里有个很关键的概念叫做 `line-box`，此方法只针对于内嵌或者行内元素。使元素变为内联元素方法有两种，一种`display: inline-block`， 另一种是`display: table-cell`
+使用`vertical-align`定义**行内元素**的基线相对于该元素所在行的基线的垂直对齐，这里有个很关键的概念叫做 `line-box`，此方法只针对于内嵌或者行内元素。使元素变为内联元素方法有两种，一种`display: inline-block`， 另一种是`display: table-cell`， 不同的display，`vertical-align: middle`作用对象不一样
 
 ##### 方法 5.1 ：vertical-align + inline-block 
 * 给父类添加after伪元素并`vertical-align: middle`,或者在最后添加一个空白子元素并`vertical-align: middle`，目的是为了将line-box线居中
+
 ```html
 <head>
     <meta charset="UTF-8">
@@ -121,18 +122,16 @@
             height: 500px;
             background: #ccc;
         }
-
+        .parent:after{
+                    display: inline-block;
+                    vertical-align: middle;
+                    content: '';
+                    height:100%;
+                }
         .son {
             display: inline-block;
             background: #555555;
             margin:auto;
-        }
-
-        .parent:after{
-            display: inline-block;
-            vertical-align: middle;
-            content: '';
-            height:100%;
         }
     </style>
 </head>
@@ -146,6 +145,7 @@
 ##### 方法 5.2： vertical-align + table-cell 
 * 使用`display: table-cell`，table-cell 就是html中 `<td>`元素的特性， 可以让`vertical-align: middle`生效
 * 给父元素display设置为table-cell，`vertical-align: middle;`,其其子元素就可以垂直居中了
+
 ```css
 .parent {
     height: 500px;
@@ -157,7 +157,7 @@
     background: #555555;
 }
 ```
-##### 方法 6 : 绝对定位+margin：auto +  四个定位值
+#### 方法 6 : 绝对定位+margin：auto +  四个定位值
 通过对确定宽高的的元素，相对其父元素定位，`top` `bottom` `left` `right`四个属性的值都设置为0， 通过margin：auto来对子元素进行位置的改变，这种方法原理其实就是靠`margin: auto`将剩余部分空间通过平分的方式填充了，自然就垂直水平居中了，
 
 ```html
@@ -170,9 +170,7 @@
         position: relative;
         height: 200px;
         background: yellow;
-
     }
-
     .type2-son {
         position: absolute;
         width: 100px;
@@ -187,7 +185,7 @@
 ```
  绝对定位居中原理 ： [原理](https://www.zhangxinxu.com/wordpress/2013/11/margin-auto-absolute-%E7%BB%9D%E5%AF%B9%E5%AE%9A%E4%BD%8D-%E6%B0%B4%E5%B9%B3%E5%9E%82%E7%9B%B4%E5%B1%85%E4%B8%AD/)
 
-##### 方法7：line-height
+#### 方法7：line-height
 
 `line-height`，这个使用也是有使用条件的。 在应用到一个块级元素时，它定义了该元素中基线之间的最小距离而不是最大距离。  
 并且该属性还会被子元素继承。
