--- a/JS/同源策略到前端跨域.md
+++ b/JS/同源策略到前端跨域.md
@@ -1,4 +1,3 @@
-parseFloat((0.1 + 0.2).toFixed(10))
 ---
 title: 同源策略到前端跨域.md
 date: 2018-03-08 20:16:40
@@ -7,7 +6,7 @@ tags: JS
 
 # 同源策略到前端跨域
 
-前言：之前学习源生ajax时，遇到过ajax跨越问题，当时看红宝书知道CROS解决，一直在前端设置，不成功，一直以为是我哪里没有设置好，到后面才发现其实这个解决是需要在服务器端返回信息里面添加返回头`Response Header`，让浏览器允许访问跨域资源。实际上， 浏览器不会拦截不合法的跨域请求, 而是拦截了他们的响应, 因此即使请求不合法, 很多时候, 服务器依然收到了请求。后面看了[路易斯的ajax知识体系](http://louiszhai.github.io/2016/11/02/ajax/#什么是CORS)又知道了有关ajax跨域还有其他的跨域解决方案，我以为我懂了，但是都没有去验证，直到过了一段时间，再看到这篇博文以及路易斯关于同源策略到前端跨域这边文章时，自己对跨域的了解其实很片面。今天好好总结一下有关跨域的整个由来以及解决方案。
+前言：之前学习源生ajax时，遇到过ajax跨越问题，当时看红宝书知道CORS解决，一直在前端设置，不成功，一直以为是我哪里没有设置好，到后面才发现其实这个解决是需要在服务器端返回信息里面添加返回头`Response Header`，让浏览器允许访问跨域资源。实际上， 浏览器不会拦截不合法的跨域请求, 而是拦截了他们的响应, 因此即使请求不合法, 很多时候, 服务器依然收到了请求。后面看了[路易斯的ajax知识体系](http://louiszhai.github.io/2016/11/02/ajax/#什么是CORS)又知道了有关ajax跨域还有其他的跨域解决方案，我以为我懂了，但是都没有去验证，直到过了一段时间，再看到这篇博文以及路易斯关于同源策略到前端跨域这边文章时，自己对跨域的了解其实很片面。今天好好总结一下有关跨域的整个由来以及解决方案。
 
 ## 同源策略
 
