--- a/JS/节流与防抖.md
+++ b/JS/节流与防抖.md
@@ -8,8 +8,8 @@
 
 
 ```js
-// 简单的节流函数
-function throttle (func, wait, mustRun) {
+// 简单的节流函数 wait的延时保证程序的健壮性
+function throttle (func, mustRun, wait) {
     let timeout,
         startTime = new Date();
     return function () {
@@ -17,12 +17,14 @@ function throttle (func, wait, mustRun) {
             args = arguments,
             curTime = new Date();
         clearTimeout(timeout);
-        // 如果达到了规定的触发时间间隔，触发 handler
+        // 如果达到了时间间隔，触发 handler
+        // 如果没有，设置一个延时，假设为最后一次
         if (curTime - startTime >= mustRun) {
             func.apply(that, args);
             startTime = curTime;
         } else {
-            // 没达到触发间隔，重新设定定时器
+            // 没达到触发间隔，重新设定定时器 ，
+            // 保证不丢失最后一次触发，如果中间再触发，会在之前被clear掉
             timeout = setTimeout(func, wait);
         }
     };
