--- a/ES6/2、变量解构赋值.md
+++ b/ES6/2、变量解构赋值.md
@@ -1,5 +1,7 @@
 ## 变量的解构赋值
-这一知识点 理解起来很费劲，尽量多看几遍
+
+所有类型的数据都可以进行解构赋值，要求解构时解构对应即可。
+
 ### 对象的解构赋值
 
 
@@ -69,14 +71,36 @@ let x;
 ({x} = {x: 1});
 ```
 
-#### 4 数值和布尔值的解构赋值
+### 字符串的解构赋值
+```js
+const [a, b, c, d, e] = 'hello';
+a // "h"
+b // "e"
+c // "l"
+d // "l"
+e // "o"
+```
+
+类似数组的对象都有一个`length`属性，因此还可以对这个属性解构赋值。
+
+```js
+let {length : len} = 'hello';
+len // 5
+```
+
+
+### 数值和布尔值的解构赋值
 
 数值和布尔值的包装对象都有toString属性,解构赋值时，如果等号右边是数值和布尔值，则会先转为对象。
-#### 5.函数参数的解构赋值
+### 函数参数的解构赋值
 函数的参数也可以使用解构赋值,参数会被解析为变量
-#### 6.圆括号的问题
+
+### 圆括号的问题
+
 尽量不使用圆括号。
-可以使用圆括号的情况只有一种：赋值语句的非模式部分，可以使用圆括号。
+
+可以使用圆括号的情况只有一种：赋值语句的非模式部分(后面部分)，可以使用圆括号。
+
 ```javascript
 [(b)] = [3]; // 正确
 ({ p: (d) } = {}); // 正确
@@ -133,9 +157,10 @@ function f([z,(x)]) { return x; }
 
 
 
-#### 7.解构解析用途
+### 解构解析用途
 
-交换变量的值
+* 交换变量的值
+
 ```javascript
 let x = 1;
 let y = 2;
@@ -143,15 +168,57 @@ let y = 2;
 [x, y] = [y, x];
 ```
 
+* 从函数返回多个值，
+```js
+// 返回一个数组
 
-从函数返回多个值，
+function example() {
+  return [1, 2, 3];
+}
+let [a, b, c] = example();
 
-函数参数的定义，
+// 返回一个对象
 
-提取JSON数据，
+function example() {
+  return {
+    foo: 1,
+    bar: 2
+  };
+}
+let { foo, bar } = example();
+```
 
-函数参数的默认值，
+
+* 函数参数的定义
+```js
+// 参数是一组有次序的值
+function f([x, y, z]) { ... }
+f([1, 2, 3]);
+
+// 参数是一组无次序的值
+function f({x, y, z}) { ... }
+f({z: 3, y: 2, x: 1});
+```
+
+* 提取JSON数据,解构赋值对提取JSON数据尤其有用
+```js
+let jsonData = {
+  id: 42,
+  status: "OK",
+  data: [867, 5309]
+};
+
+let { id, status, data: number } = jsonData;
+
+console.log(id, status, number);
+// 42, "OK", [867, 5309]
+```
+
+* 函数参数的默认值，
 
 遍历Map结构，
 
-输入模块的指定方法
+* 加载（输入）模块的指定方法
+```js
+const { SourceMapConsumer, SourceNode } = require("source-map");
+```
