doc-String-extend

--- a/ES6/3、字符串的扩展.md
+++ b/ES6/3、字符串的扩展.md
@@ -1,11 +1,76 @@
 ##字符串的扩展
+更多的是添加了unicode以及unicode码点数大于 `0xffff`的字符和其他语言字符的支持，这块内容在使用到的时候对应字符的时候了解即可。
 
 ### 1、codePointAt()
-### 2、String.fromCodePoint() 、字符串的遍历器接口
-### includes startsWith endsWith
-### repeat
-### padStart padEnd
-### matchAll
-    `matchAll`方法返回一个正则表达式在当前字符串的所有匹配，
-### 3、模板字符串{}
-### 4、多种新处理字符串的API
+### 2、String.fromCodePoint() 
+
+### 字符串的遍历器接口
+ES6为字符串添加了Iterator接口，使字符串可以使用 `for-of`遍历，但是在使用字符串遍历的过程中，使用的频率不是很高。
+
+###  新增API方法-
+
+#### API-查找
+
+* includes()：返回布尔值，表示是否找到了参数字符串。
+* startsWith()：返回布尔值，表示参数字符串是否在原字符串的头部。
+* endsWith()：返回布尔值，表示参数字符串是否在原字符串的尾部。
+
+#### API-类似遍历
+* repeat()：返回一个新字符串，表示将原字符串重复n次。
+
+```js
+'x'.repeat(3) // "xxx"
+'hello'.repeat(2) // "hellohello"
+'na'.repeat(0) // ""
+
+// 参数如果是小数的话会向下取整， 负数或者Infinity会报错
+'na'.repeat(2.9) // "nana"
+```
+
+#### API-pad
+
+* padStart()用于头部补全
+* padEnd()用于尾部补全
+
+一共接受两个参数，第一个参数是字符串补全生效的最大长度，第二个参数是用来补全的字符串。
+
+```js
+'x'.padStart(5, 'ab') // 'ababx'
+'x'.padStart(4, 'ab') // 'abax'
+
+'x'.padEnd(5, 'ab') // 'xabab'
+'x'.padEnd(4, 'ab') // 'xaba'
+```
+
+#### API-正则
+* matchAll 返回一个正则表达式在当前字符串的所有匹配
+
+### 模板字符串 ``
+
+* 模板字符串中嵌入变量，需要将变量名写在`${}`之中。
+* `{}`中可以进行运算，调用函数。
+* `{}`中结果不是String，会默认调用 `toString()`
+* 模板字符串可以嵌套
+
+```js
+const tmpl = addrs => `
+  <table>
+  ${addrs.map(addr => `
+    <tr><td>${addr.first}</td></tr>
+    <tr><td>${addr.last}</td></tr>
+  `).join('')}
+  </table>
+`;
+```
+
+#### 用处1: 模板编译
+#### 用处2： 标签模板
+标签模板其实不是模板，而是函数调用的一种特殊形式。“标签”指的就是函数，紧跟在后面的模板字符串就是它的参数。
+```js
+alert`123`
+// 等同于
+alert(123)
+```
+
+#### String.raw
+`String.raw`方法，往往用来充当模板字符串的处理函数，返回一个斜杠都被转义（即斜杠前面再加一个斜杠）的字符串，对应于替换变量后的模板字符串。
