doc-Number-extend

--- a/ES6/4、数值扩展.md
+++ b/ES6/4、数值扩展.md
@@ -1,25 +1,25 @@
 ## 数值扩展
 
-### API方法
 
-#### 更改
+### 全局对象更改
 
 - ES6 将全局方法`parseInt()`和`parseFloat()`，移植到`Number`对象上面，行为完全保持不变。
 
-#### Number对象更改
+### Number对象更改
 
 
-1、`Number.isFinite()`用来检查一个数值是否为有限的（finite）
+1. `Number.isFinite()`用来检查一个数值是否为有限的（finite）
 
-2、`Number.isNaN()`用来检查一个值是否为NaN.
+2. `Number.isNaN()`用来检查一个值是否为NaN.
 
-3、`Number.isInteger()`用来判断一个数是否为整数。
+3. `Number.isInteger()`用来判断一个数是否为整数。
 
-4、`Number.MAX_SAFE_INTEGER`表示最大数上限， `Number.MIN_SAFE_INTEGER`表示最大数上限， `Number.issafeInteger`则是用来判断一个整数是否落在这个范围之内。
+4. `Number.MAX_SAFE_INTEGER`表示最大数上限， `Number.MIN_SAFE_INTEGER`表示最大数上限， `Number.issafeInteger`则是用来判断一个整数是否落在这个范围之内。
 
-#### Math对象新增API
+### Math对象新增API
 
-##### 1、`Math.trunc()`用于去除一个数的小数部分，返回整数部分。
+#### `Math.trunc()`
+用于去除一个数的小数部分，返回整数部分。
 ```javascript
 Math.trunc(4.1) // 4
 Math.trunc(4.9) // 4
@@ -36,7 +36,9 @@ Math.trunc = Math.trunc || function(x) {
 ```
 
 
-##### 2、`Math.sign()`用来判断正、负、零。
+#### `Math.sign()`
+用来判断正、负、零。
+
 * 参数为正数，返回`+1`；
 * 参数为负数，返回`-1`；
 * 参数为 0，返回`0`；
@@ -66,9 +68,8 @@ Math.sign = Math.sign || function(x) {
 
 
 
-##### 3、`Math.cbrt()`求立方根
-
-对于没有部署这个方法的环境，可以用下面的代码模拟。
+#### `Math.cbrt()`
+求立方根，对于没有部署这个方法的环境，可以用下面的代码模拟。
 
 ```javascript
 Math.cbrt = Math.cbrt || function(x) {
@@ -78,19 +79,24 @@ Math.cbrt = Math.cbrt || function(x) {
 ```
 
 
-##### 4、`Math.clz32`方法返回一个数的 32 位无符号整数形式有多少个前导 0。
+#### `Math.clz32`
+方法返回一个数的 32 位无符号整数形式有多少个前导 0。
 
 
-##### 5、`Math.imul`方法返回两个数以 32 位带符号整数形式相乘的结果，返回的也是一个 32 位的带符号整数。
+#### `Math.imul`
+方法返回两个数以 32 位带符号整数形式相乘的结果，返回的也是一个 32 位的带符号整数。
 
-##### 6、`Math.fround`方法返回一个数的32位单精度浮点数形式。
+#### `Math.fround`
+方法返回一个数的32位单精度浮点数形式。
 
-##### 7、`Math.hypot`方法返回所有参数的平方和的平方根。
+#### `Math.hypot`
+方法返回所有参数的平方和的平方根。
 
-以下新增对数方法
 
-##### 1、`Math.expm1(x)`返回 e ^x - 1，即`Math.exp(x) - 1`。
-对于没有部署这个方法的环境，可以用下面的代码模拟。
+#### 新增对数方法
+
+##### `Math.expm1(x)`
+返回 e ^x - 1，即`Math.exp(x) - 1`。对于没有部署这个方法的环境，可以用下面的代码模拟。
 
 ```javascript
 Math.expm1 = Math.expm1 || function(x) {
@@ -99,9 +105,11 @@ Math.expm1 = Math.expm1 || function(x) {
 ```
 
 
-##### 2、`Math.log1p(x)`方法返回`1 + x`的自然对数，即`Math.log(1 + x)`。如果`x`小于-1，返回`NaN`。
+##### `Math.log1p(x)`
+方法返回`1 + x`的自然对数，即`Math.log(1 + x)`。如果`x`小于-1，返回`NaN`。
 
-##### 3、`Math.log10(x)`返回以 10 为底的`x`的对数。如果`x`小于 0，则返回 NaN。
+##### `Math.log10(x)`
+返回以 10 为底的`x`的对数。如果`x`小于 0，则返回 NaN。
 对于没有部署这个方法的环境，可以用下面的代码模拟。
 
 ```javascript
@@ -110,7 +118,8 @@ Math.log10 = Math.log10 || function(x) {
 };
 ```
 
-##### 4、`Math.log2(x)`返回以 2 为底的`x`的对数。如果`x`小于 0，则返回 NaN。
+#####  `Math.log2(x)`
+返回以 2 为底的`x`的对数。如果`x`小于 0，则返回 NaN。
 对于未实现的方法同上
 
 
@@ -123,7 +132,7 @@ Math.log10 = Math.log10 || function(x) {
 * `Math.acosh(x)` 返回`x`的反双曲余弦（inverse hyperbolic cosine）
 * `Math.atanh(x)` 返回`x`的反双曲正切（inverse hyperbolic tangent）
 
-#### 新增指数运算符
+### 新增指数运算符
 
 ES2016 新增了一个指数运算符（`**`）。
 
@@ -144,8 +153,5 @@ b **= 3;
 // 等同于 b = b * b * b;
 ```
 
-#####
-#####
 
-##### 4、三角函数、对数等方法。
 
