doc-Regex-extend

--- a/ES6/6、函数扩展.md
+++ b/ES6/6、函数扩展.md
@@ -1,6 +1,7 @@
 ## 函数扩展
-新特性介绍
+
 ### 函数默认值
+
 #### 可以指定函数默认值
 `function text (x, y='string'){    }`
 默认值之后的变量必须是带默认值的，有一个要注意的点，参数变量`x`是默认声明的，在函数体中，不能用`let`或`const`再次声明，否则会报错。
@@ -46,8 +47,12 @@ f(undefined, 1) // [1, 1]
 
 
 
-### rest参数`...`将变量转换为一个数组
-`function test(...arg){    }`
+### rest参数
+`...`将变量转换为一个数组
+
+```js
+function test(...arg){    }
+```
 rest 参数搭配的变量是一个数组，该变量将多余的参数放入数组中。
 
 下面是一个利用 rest 参数改写数组`push`方法的例子。
@@ -68,20 +73,26 @@ push(a, 1, 2, 3)
 rest 参数之后不能再有其他参数（即只能是最后一个参数），否则会报错。
 
 
-#### 只要参数使用了默认值、解构赋值、或者扩展运算符，就不能显式指定严格模式。
+**只要参数使用了默认值、解构赋值、或者扩展运算符，就不能显式指定严格模式。**
+
 这样规定的原因是，函数内部的严格模式，同时适用于函数体和函数参数。但是，函数执行的时候，先执行函数参数，然后再执行函数体。这样就有一个不合理的地方，只有从函数体之中，才能知道参数是否应该以严格模式执行，但是参数却应该先于函数体执行。
 
+### name属性
+函数的name属性，返回该函数的函数名。
 
-3、扩展运算符`...[array]` 将数组拆解成单个
+```js
+function foo() {}
+foo.name // "foo"
+```
 
 ### 箭头函数
-如果箭头函数不需要参数或需要多个参数，就使用一个圆括号代表参数部分。
+* 如果箭头函数不需要参数或需要多个参数，就使用一个圆括号代表参数部分。
 
-如果箭头函数的代码块部分多于一条语句，就要使用大括号将它们括起来，并且使用`return`语句返回。
+* 如果箭头函数的代码块部分多于一条语句，就要使用大括号将它们括起来，并且使用`return`语句返回。
 
-由于大括号被解释为代码块，所以如果箭头函数直接返回一个对象，必须在对象外面加上括号，否则会报错。
+* 由于大括号被解释为代码块，所以如果箭头函数直接返回一个对象，必须在对象外面加上括号，否则会报错。
 
-箭头函数可以与变量解构结合使用。
+* 箭头函数可以与变量解构结合使用。
 
 ```javascript
 const full = ({ first, last }) => first + ' ' + last;
@@ -92,7 +103,8 @@ function full(person) {
 }
 ```
 #### 箭头函数使用注意点
-（1）函数体内的`this`对象，就是定义时所在的对象，而不是使用时所在的对象。
+1. 函数体内的`this`对象，就是定义时所在的对象，而不是使用时所在的对象。
+
 ```javascript
 function Timer() {
   this.s1 = 0;
@@ -138,14 +150,13 @@ function foo() {
 ```
 
 
-（2）不可以当作构造函数，也就是说，不可以使用`new`命令，否则会抛出一个错误。
+2. 不可以当作构造函数，也就是说，不可以使用`new`命令，否则会抛出一个错误。
 
-（3）不可以使用`arguments`对象，该对象在函数体内不存在。如果要用，可以用 rest 参数代替。
+3. 不可以使用`arguments`对象，该对象在函数体内不存在。如果要用，可以用 rest 参数代替。
+	* 除了`this`，以下三个变量在箭头函数之中也是不存在的，指向外层函数的对应变量：`arguments`、`super`、`new.target`。
 
-除了`this`，以下三个变量在箭头函数之中也是不存在的，指向外层函数的对应变量：`arguments`、`super`、`new.target`。
 
-
-（4）不可以使用`yield`命令，因此箭头函数不能用作 Generator 函数。
+4. 不可以使用`yield`命令，因此箭头函数不能用作 Generator 函数。
 
 
 ### 双冒号运算符
