--- a/JS/数组排序算法.md
+++ b/JS/数组排序算法.md
@@ -318,5 +318,7 @@ function sort(array) {
 
 ### 12、基数排序
 
-基数排序源于老式穿孔机, 排序器每次只能看到一个列. 它是基于元素值的每个位上的字符来排序的. 对于数字而言就是分别基于个位, 十位, 百位 或千位等等数字来排序. \(不明白不要紧, 我也不懂, 请接着往下读\)![](/assets/sort12.png)
+基数排序源于老式穿孔机, 排序器每次只能看到一个列. 它是基于元素值的每个位上的字符来排序的. 对于数字而言就是分别基于个位, 十位, 百位 或千位等等数字来排序. \(不明白不要紧, 我也不懂, 请接着往下读\)
+
+![](/assets/sort12.png)
 
