--- a/JS/正则表达式.md
+++ b/JS/正则表达式.md
@@ -60,40 +60,36 @@ tags: JS
  =========================================================*/
 
 (function () {
-    Date.prototype.format = function (fmt) {
-        if (typeof(fmt) == "undefined") {
-            fmt = "yyyy-MM-dd hh:mm:ss";
-        }
-        var o = {
-            "M+": this.getMonth() + 1, //月份
-            "d+": this.getDate(), //日
-            "h+": this.getHours(), //小时
-            "m+": this.getMinutes(), //分
-            "s+": this.getSeconds(), //秒
-            "q+": Math.floor((this.getMonth() + 3) / 3), //季度
-            "S": this.getMilliseconds() //毫秒
-        };
-        //年份是最多表示有四位数，所以分开来处理
-        if (/(y+)/.test(fmt)) {
-            fmt = fmt.replace(RegExp.$1, (this.getFullYear() + "").substr(4 - RegExp.$1.length));
-        }
-        //遍历其他的都是两位数的时间内容
-        for (var k in o) {
-            if (new RegExp("(" + k + ")").test(fmt))
-                fmt = fmt.replace(RegExp.$1, (RegExp.$1.length == 1) ? 
-                    (o[k]) : (("00" + o[k]).substr(("" + o[k]).length)));
-        }
-
-        return fmt;
+  Date.prototype.format = function (fmt = 'yyyy-MM-dd hh:mm:ss') {
+    let o = {
+      'M+': this.getMonth() + 1, //月份
+      'd+': this.getDate(), //日
+      'h+': this.getHours(), //小时
+      'm+': this.getMinutes(), //分
+      's+': this.getSeconds(), //秒
+      'q+': Math.floor((this.getMonth() + 3) / 3), //季度
+      'S': this.getMilliseconds() //毫秒
     };
+    //年份是最多表示有四位数，所以分开来处理
+    if (/(y+)/.test(fmt))
+      fmt = fmt.replace(RegExp.$1, ('0000' + this.getFullYear()).substring(this.getFullYear().toString().length));
+    //遍历其他的都是两位数的时间内容
+    for (let k in o) {
+      if (new RegExp('(' + k + ')').test(fmt))
+        fmt = fmt.replace(RegExp.$1, (RegExp.$1.length == 1) ?
+          (o[k]) : (('00' + o[k]).substring(('' + o[k]).length)));
+    }
 
-    Date.prototype.formatDay = function () {
-        return this.format("yyyy-MM-dd");
-    };
+    return fmt;
+  };
 
-    Date.prototype.formatDay2 = function () {
-        return this.format("yyyyMMddhhmmss");
-    };
+  Date.prototype.formatDay = function () {
+    return this.format('yyyy-MM-dd');
+  };
+
+  Date.prototype.formatDay2 = function () {
+    return this.format('yyyyMMddhhmmss');
+  };
 
 })();
 ```
