--- a/Language/JS/数组、字符串中最大、重复元素查找.md
+++ b/Language/JS/数组、字符串中最大、重复元素查找.md
@@ -1,16 +1,19 @@
 ---
-title: 找最大值、重复元素.md
+title: JS数组找最大值、重复元素.md
 date: 2018-03-08 20:17:40
 tags: JS
 ---
+# JS数组找最大值、重复元素
 
 ### 一维数组中寻找最大值
 
-let array=\[......\]
+```js
+let array=[...]
+```
 
 #### 1、for循环遍历
 
-for循环是最直接的方法，但也是时间复杂度最高的方法。O\(n\)
+for循环是最直接的方法，但也是时间复杂度最高的方法。O(n)
 
 ```js
 let array = [5, 7, 89, 2, 4]
@@ -42,7 +45,7 @@ call传递的是单个参数：`call(this,arg1,arg2,arg3...)`
 apply可以传递的是一个数组: `apply(this,arguments[])`  
 bind只传递一个对象:`bind(this)`
 
-#### 3、Array.sort\(\)排序之后再取最后一位
+#### 3、Array.sort()排序之后再取最后一位
 
 这个办法的时间复杂度就是视具体浏览器JS引擎以及数组长度而定了。
 
@@ -54,7 +57,7 @@ console.log(newArr[newArr.length-1]);  //89
 
 ### 一维数组寻找重复率最高的元素
 
-##### 使用hash
+##### 1、使用key-value方式
 
 让object.key=元素，value=出现次数，遍历对象，找到value中最大值，然后将对应的key值返回就好了
 
@@ -84,12 +87,4 @@ for (let i = 0; i < keys.length; i++) {
 }
 console.log(max)
 ```
-
-##### 使用空间换时间
-
-### 找到找到字符串中出现频率最高的字符
-
-这个问题和在数组中寻找出现频率最高的元素其实是同一个问题，区别在于，一个是字符，一个是数组。遍历的方式不一样而已。
-
-对于for循环遍历，字符串具有length属性，上面的方法完全适用。
 
