<feat> webapck && js

--- a/Language/JS/数组排序算法.md
+++ b/Language/JS/数组排序算法.md
@@ -73,9 +73,8 @@ function sort(array) {
 
 ### 3、选择排序
 
-从算法逻辑上看, 选择排序是一种简单且直观的排序算法. 它也是两层循环. 内层循环就像工人一样, 它是真正做事情的, 内层循环每执行一遍, 将选出本次待排序的元素中最小\(或最大\)的一个, 存放在数组的起始位置. 而 外层循环则像老板一样, 它告诉内层循环你需要不停的工作, 直到工作完成\(也就是全部的元素排序完成\).  
-_**Tips**_  
-: 选择排序每次交换的元素都有可能不是相邻的, 因此它有可能打破原来值为相同的元素之间的顺序. 比如数组\[2,2,1,3\], 正向排序时, 第一个数字2将与数字1交换, 那么两个数字2之间的顺序将和原来的顺序不一致,**虽然它们的值相同, 但它们相对的顺序却发生了变化**. 我们将这种现象称作`不稳定性`.
+从算法逻辑上看, 选择排序是一种简单且直观的排序算法. 它也是两层循环. 内层循环就像工人一样, 它是真正做事情的, 内层循环每执行一遍, 将选出本次待排序的元素中最小(或最大)的一个, 存放在数组的起始位置. 而 外层循环则像老板一样, 它告诉内层循环你需要不停的工作, 直到工作完成(也就是全部的元素排序完成).  
+_**Tips**_ :选择排序每次交换的元素都有可能不是相邻的, 因此它有可能打破原来值为相同的元素之间的顺序. 比如数组`[2,2,1,3]`, 正向排序时, 第一个数字2将与数字1交换, 那么两个数字2之间的顺序将和原来的顺序不一致,**虽然它们的值相同, 但它们相对的顺序却发生了变化**. 我们将这种现象称作`不稳定性`.
 
 ```js
 /** 3、选择排序 **/
@@ -101,9 +100,9 @@ function sort(array) {
 
 ### 插入排序
 
-插入排序的设计初衷是往有序的数组中快速插入一个新的元素. 它的算法思想是: 把要排序的数组分为了两个部分, 一部分是数组的全部元素\(除去待插入的元素\), 另一部分是待插入的元素; 先将第一部分排序完成, 然后再插入这个元素. 其中第一部分的排序也是通过再次拆分为两部分来进行的.
+插入排序的设计初衷是往有序的数组中快速插入一个新的元素. 它的算法思想是: 把要排序的数组分为了两个部分, 一部分是数组的全部元素(除去待插入的元素), 另一部分是待插入的元素; 先将第一部分排序完成, 然后再插入这个元素. 其中第一部分的排序也是通过再次拆分为两部分来进行的.
 
-插入排序由于操作不尽相同, 可分为 直接插入排序 , 折半插入排序\(又称二分插入排序\), 链表插入排序 , 希尔排序 .
+插入排序由于操作不尽相同, 可分为 直接插入排序 , 折半插入排序(又称二分插入排序), 链表插入排序 , 希尔排序 .
 
 ### 4、直接插入排序
 
@@ -143,7 +142,7 @@ function sort(array) {
 
 算法基本思想是:
 
-1. 取0 ~ i-1的中间点\( m = \(i-1\)&gt;&gt;1 \), array\[i\] 与 array\[m\] 进行比较, 若array\[i\] &lt; array\[m\] , 则说明待插入的元素array\[i\] 应该处于数组的 0 ~ m 索引之间; 反之, 则说明它应该处于数组的 m ~ i-1 索引之间.
+1. 取`0 ~ (i-1)`的中间点`( m = (i-1)>>1 )`, `array[i]` 与 `array[m]` 进行比较, 若`array[i] < array[m]` , 则说明待插入的元素`array[i]` 应该处于数组的 `0 ~ m` 索引之间; 反之, 则说明它应该处于数组的 `m ~ (i-1)` 索引之间.
 2. 重复步骤1, 每次缩小一半的查找范围, 直至找到插入的位置.
 3. 将数组中插入位置之后的元素全部后移一位.
 4. 在指定位置插入第 i 个元素.
@@ -178,17 +177,16 @@ function sort(array) {
 
 ### 6、希尔排序
 
-希尔排序也称缩小增量排序, 它是直接插入排序的另外一个升级版, 实质就是分组插入排序. 希尔排序以其设计者希尔\(Donald Shell\)的名字命名, 并于1959年公布.
+希尔排序也称缩小增量排序, 它是直接插入排序的另外一个升级版, 实质就是分组插入排序. 希尔排序以其设计者希尔(Donald Shell)的名字命名, 并于1959年公布.
 
 算法的基本思想:
 
-1. 将数组拆分为若干个子分组, 每个分组由相距一定”增量”的元素组成. 比方说将\[0,1,2,3,4,5,6,7,8,9,10\]的数组拆分为”增量”为5的分组, 那么子分组分别为 \[0,5\], \[1,6\], \[2,7\], \[3,8\], \[4,9\] 和 \[5,10\].
+1. 将数组拆分为若干个子分组, 每个分组由相距一定”增量”的元素组成. 比方说将`[0,1,2,3,4,5,6,7,8,9,10]`的数组拆分为”增量”为5的分组, 那么子分组分别为 `[0,5], [1,6], [2,7], [3,8], [4,9] 和 [5,10]`.
 2. 然后对每个子分组应用直接插入排序.
 3. 逐步减小”增量”, 重复步骤1,2.
 4. 直至”增量”为1, 这是最后一个排序, 此时的排序, 也就是对全数组进行直接插入排序.
 
 示意图：
-
   
 ![](/assets/sort04.png)
 
