--- a/Language/JS/继承.md
+++ b/Language/JS/继承.md
@@ -6,7 +6,7 @@ tags: JS
 
 # JavaScript继承的实现
 
-继承的实现基于原型链,[参考js从原型到原型链](JS/js从原型到原型链.md)
+继承的实现基于原型链,[参考js从原型到原型链](/Language/JS/js从原型到原型链.md)
 
 下面聊一聊JS继承实现的几种方法：
 
@@ -275,7 +275,8 @@ console.log(cat instanceof Cat);    //true
 ### 总结
 7种继承方法循序渐进，慢慢根据各自的问题探寻出一种都能解决所有问题的继承方法，一般常用的就是使用原型继承，对原型的继承存在的问题没有在特定的场景中不会遇到，从严瑾的角度，还是推荐使用寄生组合继承，node中毫无疑问优先使用extends继承，如果可以babel转码，也是优先推荐extends
 
-参考：[JS实现继承的几种方式](http://www.cnblogs.com/humin/p/4556820.html)
+参考：
+- [JS实现继承的几种方式](http://www.cnblogs.com/humin/p/4556820.html)
 
 
 
