--- a/Language/JS/递归.md
+++ b/Language/JS/递归.md
@@ -54,7 +54,7 @@ var factorial = (function f(num){
 });
 ```
 
-以上代码创建了一个名为 f\(\) 的命名函数表达式，然后将它赋值给变量 factorial 。即便把函数赋值给了另一个变量，函数的名字 f 仍然有效，所以递归调用照样能正确完成。这种方式在严格模式和非严格模式下都行得通。
+以上代码创建了一个名为 `f()` 的命名函数表达式，然后将它赋值给变量 `factorial` 。即便把函数赋值给了另一个变量，函数的名字 `f` 仍然有效，所以递归调用照样能正确完成。这种方式在严格模式和非严格模式下都行得通。
 
 ## 递归优化
 
