--- a/Language/JS/闭包.md
+++ b/Language/JS/闭包.md
@@ -90,11 +90,11 @@ result[6]();  //6
 
 匿名函数的执行环境具有全局性，因此其 this 对象通常指向 window
 
-**闭包的this对象一般也是指向window**。具体使用用要看具体的情况，有没有实例化对象，有没有使用apply\(\) call\(\) 等来改变this对象。
+**闭包的this对象一般也是指向window**。具体使用用要看具体的情况，有没有实例化对象，有没有使用apply() call() 等来改变this对象。
 
 ### 面试中问到关于函数闭包的问题
 
-f\(a\)\(b\);
+f(a)(b);
 
 要求返回a+b的结果。
 
