--- a/Language/JS/正则表达式.md
+++ b/Language/JS/正则表达式.md
@@ -3,26 +3,17 @@ title: 正则表达式.md
 date: 2018-03-12 20:20:40
 tags: JS
 ---
-## 介绍
+# JS正则表达式
+
+## 概述
 关于正则表达式的匹配，一开始觉得很复杂，主要是因为表达式看不懂，不知道什么是匹配符，限定符，操作符，其实使用过后才发现，正则表达其实是比较简单的，具体的参考下面一篇博文，《[JavaScript学习总结（八）正则表达式](https://segmentfault.com/a/1190000000699097)》里面对于概念的讲解比较详细，正则的使用主要看自己怎么去组合，想要匹配什么样的内容，很多时候，我们要用到的正则匹配，其实网上都有比较全的正则表达式，直接搜索就可以获取到。
 
 充分利用网上的资源才是正确学习正则的途径。
 
-我对于正则的害怕主要是因为记不住正则表达式中特殊字符，MDN有一张表格，很完整很权威，对照这张表格就可以的。要求看到特殊字符就知道是什么意思。
-
-[**MDN-正则表达式**](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Guide/Regular_Expressions)
+我对于正则的害怕主要是因为记不住正则表达式中特殊字符，经过一定的代码量积累，慢慢的就熟悉了，一般有些印象不清楚的可以查看官网[MDN-正则表达式](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Guide/Regular_Expressions)
 
 注意正则有一些字符类匹配，很多时候大家都是使用字符类匹配。这个要记住。
 
-![](/assets/import4.png)
-
-重复匹配符也要注意，这个也要记住，一看就能知道表达的匹配范围。
-
-![](/assets/import5.png)
-
-![](/assets/import6.png)
-
-其他的东西就直接在博文上看就可以了。
 
 下面有一个导图，记住这个导图你就理解了。
 
@@ -43,10 +34,12 @@ tags: JS
 
 `x(?!reg)` 表示表达式x匹配项后面不能有匹配项reg，但是匹配结果里面只有x的表达式。
 
-### 贪婪与非贪婪
+### 贪婪模式
 正则默认是贪婪的，在量词后面使用`?`表示非贪婪的。
 
-## 实例：日期格式化
+## 常用正则表达式
+
+### 日期格式化
 
 ```js
 'usestrict';
