--- a/Language/JS/继承.md
+++ b/Language/JS/继承.md
@@ -8,6 +8,12 @@ tags: JS
 
 继承的实现基于原型链,[参考js从原型到原型链](/Language/JS/js从原型到原型链.md)
 
+在说JS继承之前，补充说明几个概念，方便下面的理解。
+
+- **多继承**  ：顾名思义，实现多个继承，就是一个子类需要继承多个父类。
+- **来自原型对象的引用属性是所有实例共享的**  ：所有实例共享同一个来自原型对象的引用类型，一旦某个实例操作使引用类型发生变化，则其他实例上改引用类型也会变化。例如`cat1`和`cat2`都继承于`Animal`,cat2执行`cat2.type.push(2)`操作后, `cat2.type` 和 `cat1.type` 都变成了`[1,2]`。
+- **向父类构造函数传参** ：通过创建子类实例的过程中， 过`new Cat('cat')`向父类构造函数中传递参数，
+
 下面聊一聊JS继承实现的几种方法：
 
 先定义一个父类Animal，有一个属性，一个实例方法，一个原型方法
@@ -67,16 +73,6 @@ console.log(cat2.type);  // [1,2]
 2. 无法实现多继承
 3. 来自原型对象的引用属性是所有实例共享的，例如改变子类实例2改变父类某个引用属性，则子类实例1中也会相应改变。
 4. 创建子类实例时，无法向父类构造函数传参，即不能通过new Cat('cat')向父类构造函数中传递name，只能通过Cat.prototype.name='cat'向子类属性中添加name。
-
-#### 补充说明几个概念
-**多继承**  
-顾名思义，实现多个继承，就是一个子类需要继承多个父类。
-
-**来自原型对象的引用属性是所有实例共享的**  
-所有实例共享同一个来自原型对象的引用类型，一旦某个实例操作使引用类型发生变化，则其他实例上改引用类型也会变化。例如 cat2.type.push(2), cat2.type 和 cat.type 都变成了`[1,2]`。
-
-**向父类构造函数传参**  
-通过创建子类实例的过程中， 即不能通过new Cat('cat')向父类构造函数中传递name，
 
 
 ### 2、构造函数继承
@@ -171,7 +167,11 @@ console.log(cat instanceof Cat); // true
 2. 无法获取父类不可枚举的方法（不可枚举方法，不能使用for in 访问到）
 
 ### 5、组合继承
-结合原型继承和构造函数继承两种方法，使用原型链实现对原型属性和方法的继承，使用构造函数来实现对实例属性的继承。通过调用父类构造，继承父类的属性并保留传参的优点，然后通过将父类实例作为子类原型，实现函数复用。
+结合原型继承和构造函数继承两种方法，
+- 使用原型链实现对原型属性和方法的继承，
+- 使用构造函数来实现对实例属性的继承。
+
+通过调用父类构造，继承父类的属性并保留传参的优点，然后通过将父类实例作为子类原型，实现函数复用。
 
 ```js
 /** 5、组合继承 **/
@@ -231,7 +231,9 @@ console.log(cat.eat());             //Tom正在吃：fish
 console.log(cat instanceof Animal); // true
 console.log(cat instanceof Cat);    //true
 ```
-跟组合继承不同点在于通过一个立即执行函数作用域，在此作用域中创建一个临时类，临时类的原型= 父类原型（解决构造函数继承中不能继承父类原型方法属性问题），再将临时类的实例等于子类原型，因为是立即执行函数作用域，执行完就销毁了临时类的实例，也就避免了在组合继承里面保存了两份实例的问题。
+跟组合继承不同点在于
+- 通过一个立即执行函数作用域，在此作用域中创建一个临时类，临时类的原型 = 父类原型（解决构造函数继承中不能继承父类原型方法属性问题），
+- 再将临时类的实例等于子类原型，因为是立即执行函数作用域，执行完就销毁了临时类的实例，也就避免了在组合继承里面保存了两份实例的问题。
 
 完美方法，但是复杂。
 
@@ -273,7 +275,9 @@ console.log(cat instanceof Cat);    //true
 在实际应用中。
 
 ### 总结
-7种继承方法循序渐进，慢慢根据各自的问题探寻出一种都能解决所有问题的继承方法，一般常用的就是使用原型继承，对原型的继承存在的问题没有在特定的场景中不会遇到，从严瑾的角度，还是推荐使用寄生组合继承，node中毫无疑问优先使用extends继承，如果可以babel转码，也是优先推荐extends
+7种继承方法循序渐进，慢慢根据各自的问题探寻出一种都能解决所有问题的继承方法，一般常用的就是使用原型继承，对原型的继承存在的问题没有在特定的场景中不会遇到，从严瑾的角度，还是推荐使用寄生组合继承。
+
+不过目前基本上代码都是ES6的，毫无疑问优先使用extends继承。
 
 参考：
 - [JS实现继承的几种方式](http://www.cnblogs.com/humin/p/4556820.html)
