--- a/Language/JS/同源策略到前端跨域.md
+++ b/Language/JS/同源策略到前端跨域.md
@@ -460,3 +460,4 @@ window.addEventListener('message',function(e){
 - [《由同源策略到前端跨域》](http://louiszhai.github.io/2016/01/11/cross-domain/)  
 - [iframe通用解决方案](http://www.alloyteam.com/2012/08/lightweight-solution-for-an-iframe-cross-domain-communication/)
 - [AlloyTeam新的跨域解决方案](http://www.alloyteam.com/2013/11/the-second-version-universal-solution-iframe-cross-domain-communication/)
+- [CORS](https://developer.mozilla.org/zh-CN/docs/Web/HTTP/Access_control_CORS)
