--- a/Language/JS/作用域与变量提升.md
+++ b/Language/JS/作用域与变量提升.md
@@ -4,7 +4,9 @@ date: 2018-03-21 20:12:40
 tags: JS
 ---
 
-### ES5中for循环定义的全局变量
+# JS中作用域与变量提升
+
+### ES5中全局变量
 
 下面表达式输出的结果为：
 
@@ -65,7 +67,7 @@ var f2 = function() {
 f2();
 ```
 
-所以我们来看之前报错的原因，这是一个函数声明，后面再接一个\(\) ，js引擎看到function关键字之后，认为后面跟的是函数定义语句，不应该以圆括号结尾，解决这个问题就是让引擎知道，**圆括号前面的部分不是函数定义语句，而是一个表达式，可以对此进行运算**。改写成这样。
+所以我们来看之前报错的原因，这是一个函数声明，后面再接一个`()` ，js引擎看到`function`关键字之后，认为后面跟的是函数定义语句，不应该以圆括号结尾，解决这个问题就是让引擎知道，**圆括号前面的部分不是函数定义语句，而是一个表达式，可以对此进行运算**。改写成这样。
 
 ```js
 (function(){ /* code */ }()); 
@@ -75,7 +77,7 @@ f2();
 (function(){ /* code */ })();
 ```
 
-##### 带参数\(parameter\)
+##### 带参数(param)
 
 有时候看到这样的一种形式，括号中传递一个参数。
 
