--- a/Language/JS/节流与防抖.md
+++ b/Language/JS/节流与防抖.md
@@ -1,11 +1,26 @@
-# 节流与防抖
-在
+# JS节流与防抖
+JS节流和防抖是说的非常多一个话题，不论什么时候，
+- 只要是监听类似scroll滚动事件，一般都要加上节流，
+- 当我们频繁的操作某个DOM时，比如input框输入时，一般要加上防抖。
 
-## 节流
+不然会来带很多性能问题。
 
+下面是节流和防抖的一个图示：
 
-**函数节流** ：保证如果电梯第一个人进来后，10秒后准时运送一次，这个时间从第一个人上电梯开始计时，不等待，如果没有人，则不运行
+![](https://user-gold-cdn.xitu.io/2019/1/25/168848565d65c88b?imageView2/0/w/1280/h/960/format/webp/ignore-error/1)
 
+## 函数节流
+当持续触发某一个函数时，保证触发函数一定时间内只执行一次。
+
+![](https://user-gold-cdn.xitu.io/2018/6/10/163e9f9241c653a8?imageView2/0/w/1280/h/960/format/webp/ignore-error/1)
+
+实现函数节流throttle的方法一般有两种，
+- 定时器 setTimeOut
+- 时间戳 new Date（）
+
+或者两者组合起来使用，更加精确
+
+定时器+时间戳方法
 
 ```js
 // 简单的节流函数 wait的延时保证程序的健壮性
@@ -32,29 +47,29 @@ function throttle (func, mustRun, wait) {
 ```
 
 
-## 防抖
+## 函数防抖
 
-**函数防抖** ：如果有人进电梯（触发事件），那电梯将在10秒钟后出发（执行事件监听器），这时如果又有人进电梯了（在10秒内再次触发该事件），我们又得等10秒再出发（重新计时）。
-
-
+当持续触发事件时，一定时间段内没有再触发事件，事件处理函数才会执行一次，如果设定的时间到来之前，又一次触发了事件，就重新开始延时。
 
 
-这个是undersource的源码，逻辑能分析，凡是对于实际应用中，显得有点复杂，。下面给一个简洁版的。
+![](https://user-gold-cdn.xitu.io/2018/6/10/163e9f9241e349d2?imageView2/0/w/1280/h/960/format/webp/ignore-error/1)
+
+
 
 ```js
 function debounce(fn, wait) {
   var timer = null;
   return function () {
-      var context = this
-      var args = arguments
-      if (timer) {
-          clearTimeout(timer);
-          timer = null;
-      }
-      timer = setTimeout(function () {
-          fn.apply(context, args)
-      }, wait)
-  } 
+    var context = this
+    var args = arguments
+    if (timer) {
+        clearTimeout(timer);
+        timer = null;
+    }
+    timer = setTimeout(function () {
+        fn.apply(context, args)
+    }, wait)
+  }
 }
 
 var fn = function () {
@@ -64,10 +79,11 @@ var fn = function () {
 setInterval(debounce(fn,500),1000) // 第一次在1500ms后触发，之后每1000ms触发一次
 
 setInterval(debounce(fn,2000),1000) // 不会触发一次（我把函数防抖看出技能读条，如果读条没完成就用技能，便会失败而且重新读条）
-
-
 ```
 
+
+## 参考
+- [防抖节流](https://juejin.im/entry/5b1d2d54f265da6e2545bfa4)
 
 
 
