--- a/Language/CSS/布局.md
+++ b/Language/CSS/布局.md
@@ -1,3 +1,5 @@
+# CSS 布局
+
 ## div+css布局较table优点
 1、符合W3C标准的，W3C标准提出**网页由三部分组成：结构（Structure）、表现（Presentation）和行为（Behavior）**。结构清晰明了，结构、样式和行为分离，带来足够好的可维护性。
 
@@ -184,3 +186,7 @@ main { flex: 1; }
 
 
 
+
+
+## inline-block 坑点
+inline-block之间会有间隙，这是因为font-size的原因，一般会将父元素的font-size设为0 ，然后再设置对应子元素的font-size
