--- a/Language/CSS/移动端适配.md
+++ b/Language/CSS/移动端适配.md
@@ -107,13 +107,13 @@ $vw_fontsize: 750; // iPhone 6尺寸的根元素大小基准值
   }
 
 ```
-## 总结
-vw方案目前支持不是很普遍，以后可能会支持比较多，而且使用sass等css预处理器，相对来说比较兼容性不是很好，推荐使用设置font-size，rem作为单位。
 
-# 1px的问题
+## 1px的问题
 **原因**:css中的1px在移动端上因为设备像素比的原因，并不是1px，会显得比较粗。
 
 **解决**:
 1. 使用border-image。实现准备好1px的border图片，
 2. transform: scale(.5)
 
+## 总结
+vw方案目前支持不是很普遍，以后可能会支持比较多，而且使用sass等css预处理器，相对来说比较兼容性不是很好，推荐使用设置font-size，rem作为单位。
