--- a/Language/CSS/背景图片轮播.md
+++ b/Language/CSS/背景图片轮播.md
@@ -3,7 +3,7 @@
 由于`<img>`标签不能实现固定高度的宽度不失真拉伸，采用CSS3`background`属性去实现!
 如果是使用`<img>`的话，使用bootstrap的轮播器器！
 
-本文参考[简爱博客-为网页添加动态背景](http://www.gouji.org/?post=317) 
+
 ### 1、全屏背景切换
 ```html
 <!doctype html>
@@ -37,7 +37,7 @@
 html只有一个div
 ```html
 <div id="img-body">
-            <div id="img-background"></div>
+    <div id="img-background"></div>
 </div>
 ```
 
@@ -94,11 +94,9 @@ function setBGimg(d) {
 ```
 显示效果不如fade淡入淡出，肯定在transition的样式没有设置好！
 
-### 大神级纯CSS3写的超炫3D页面切换
+### 其他示例
 
-[3D Image Transitions](http://demo.lanrenzhijia.com/yulan/210/)
-
-
+- [级纯CSS3写的超炫3D页面切换](http://demo.lanrenzhijia.com/yulan/210/)
 
 
 
@@ -108,4 +106,8 @@ function setBGimg(d) {
 
 
 
+
+
+## 参考
+- [简爱博客-为网页添加动态背景](http://www.gouji.org/?post=317) 
 
