--- a/Language/JS/节流与防抖.md
+++ b/Language/JS/节流与防抖.md
@@ -18,6 +18,25 @@ JS节流和防抖是说的非常多一个话题，不论什么时候，
 - 定时器 setTimeOut
 - 时间戳 new Date（）
 
+定时器方式
+```js
+function throttle(fn, time) {
+    let timer;
+    return function(){
+        const args = arguments;
+        const _that = this;
+        if(timer) {
+            return;
+        } 
+        timer = setTimeOut(() => {
+            fn.call(_that, args);
+            timer = null;
+        }, time);
+        
+    }
+}
+```
+
 或者两者组合起来使用，更加精确
 
 定时器+时间戳方法
