--- a/Language/JS/继承.md
+++ b/Language/JS/继承.md
@@ -6,12 +6,11 @@ tags: JS
 
 # JavaScript继承的实现
 
-继承的实现基于原型链,[参考js从原型到原型链](/Language/JS/js从原型到原型链.md)
+继承的实现基于原型链，原型链不清楚的可以查看上一篇[JS从原型到原型链](/Language/JS/JS原型到原型链.md)
 
 在说JS继承之前，补充说明几个概念，方便下面的理解。
-
-- **多继承**  ：顾名思义，实现多个继承，就是一个子类需要继承多个父类。
-- **来自原型对象的引用属性是所有实例共享的**  ：所有实例共享同一个来自原型对象的引用类型，一旦某个实例操作使引用类型发生变化，则其他实例上改引用类型也会变化。例如`cat1`和`cat2`都继承于`Animal`,cat2执行`cat2.type.push(2)`操作后, `cat2.type` 和 `cat1.type` 都变成了`[1,2]`。
+- **多继承**：顾名思义，实现多个继承，就是一个子类需要继承多个父类。
+- **来自原型对象的引用属性是所有实例共享的**：所有实例共享同一个来自原型对象的引用类型，一旦某个实例操作使引用类型发生变化，则其他实例上改引用类型也会变化。例如`cat1`和`cat2`都继承于`Animal`,cat2执行`cat2.type.push(2)`操作后, `cat2.type` 和 `cat1.type` 都变成了`[1,2]`。
 - **向父类构造函数传参** ：通过创建子类实例的过程中， 过`new Cat('cat')`向父类构造函数中传递参数，
 
 下面聊一聊JS继承实现的几种方法：
@@ -36,7 +35,7 @@ Animal.prototype.eat = function (food) {
     console.log(this.name + '正在吃：' + food);
 };
 ```
-### 1、原型链继承
+## 1、原型链继承
 将父类的实例作为子类的原型`son.prototype = new father()`
 ```js
 /** 1、原型链继承 - 将父类的实例作为子类的原型**/
@@ -75,7 +74,7 @@ console.log(cat2.type);  // [1,2]
 4. 创建子类实例时，无法向父类构造函数传参，即不能通过new Cat('cat')向父类构造函数中传递name，只能通过Cat.prototype.name='cat'向子类属性中添加name。
 
 
-### 2、构造函数继承
+## 2、构造函数继承
 使用父类的构造函数来增强子类实例，等于是复制父类的实例属性给子类（没用到原型）
 这里用到了`Animal.call(this);`，就是讲Animal的属性和方法等创建到了cat对象里面，但是Animal的原型方法不能创建到cat对象。
 
@@ -109,7 +108,7 @@ console.log(cat.eat('fish'));       //报错Uncaught TypeError: cat.eat is not a
 4. 多继承时，对于同名属性，会发生覆盖。
 
 
-### 3、实例继承
+## 3、实例继承
 为父类实例添加新特性，作为子类实例返回
 
 ```js
@@ -135,7 +134,7 @@ console.log(cat instanceof Cat); // false
 1. **实例是父类的实例，不是子类的实例** 注意跟构造函数继承区别。
 2. 不支持多继承
 
-### 4、拷贝继承
+## 4、拷贝继承
 这是没有什么特点，就是遍历对象，拷贝继承
 
 ```js
@@ -166,7 +165,7 @@ console.log(cat instanceof Cat); // true
 1. 效率较低，内存占用高（因为要拷贝父类的属性）
 2. 无法获取父类不可枚举的方法（不可枚举方法，不能使用for in 访问到）
 
-### 5、组合继承
+## 5、组合继承
 结合原型继承和构造函数继承两种方法，
 - 使用原型链实现对原型属性和方法的继承，
 - 使用构造函数来实现对实例属性的继承。
@@ -204,7 +203,7 @@ console.log(cat instanceof Cat);    // true
 
 1. 调用了两次父类构造函数，生成了两份实例（子类实例将子类原型上的那份屏蔽了）
 
-### 6、寄生组合继承
+## 6、寄生组合继承
 通过寄生方式，砍掉父类的实例属性，这样，在调用两次父类的构造的时候，就不会初始化两次实例方法/属性，避免的组合继承的缺点
 ```js
 /** 6、寄生组合继承 **/
@@ -238,7 +237,7 @@ console.log(cat instanceof Cat);    //true
 完美方法，但是复杂。
 
 
-### 7、使用ES6中的extends实现继承
+## 7、使用ES6中的extends实现继承
 extends继承肯定是最好的继承方法，优先推荐使用.
 
 ```js
@@ -274,7 +273,7 @@ console.log(cat instanceof Cat);    //true
 
 在实际应用中。
 
-### 总结
+## 总结
 7种继承方法循序渐进，慢慢根据各自的问题探寻出一种都能解决所有问题的继承方法，一般常用的就是使用原型继承，对原型的继承存在的问题没有在特定的场景中不会遇到，从严瑾的角度，还是推荐使用寄生组合继承。
 
 不过目前基本上代码都是ES6的，毫无疑问优先使用extends继承。
